--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -82,7 +82,7 @@ runmain.jvmargs=
 source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
-test.src.dir=test
+test.test.dir=src\\test
 war.content.additional=
 war.ear.name=${war.name}
 war.name=Webchat.war
