--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,8 @@
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-api-1.0-sdk</artifactId>
-            <version>${appengine.version}</version>
+            <version>1.9.42</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>jstl</groupId>
@@ -66,6 +67,11 @@
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
             <version>2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.objectify</groupId>
+            <artifactId>objectify</artifactId>
+            <version>5.1.9</version>
         </dependency>
     </dependencies>
 
